modified:   package.json

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "user",
     "admin"
   ],
-  "author": "shivam",
+  "author": "FadeHack",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
